WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
132868
REGRESSSION(
r168528
) Subpixel rendering: Selection rect is not positioned properly when SVG text is selected.
https://bugs.webkit.org/show_bug.cgi?id=132868
Summary
REGRESSSION(r168528) Subpixel rendering: Selection rect is not positioned pro...
alan
Reported
2014-05-13 07:42:51 PDT
patch is coming up.
Attachments
Patch
(4.06 KB, patch)
2014-05-13 08:33 PDT
,
alan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2014-05-13 08:33:24 PDT
Created
attachment 231383
[details]
Patch
Dirk Schulze
Comment 2
2014-05-13 08:36:50 PDT
Comment on
attachment 231383
[details]
Patch r=me.
WebKit Commit Bot
Comment 3
2014-05-13 10:57:25 PDT
Comment on
attachment 231383
[details]
Patch Clearing flags on attachment: 231383 Committed
r168687
: <
http://trac.webkit.org/changeset/168687
>
WebKit Commit Bot
Comment 4
2014-05-13 10:57:30 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug