REGRESSSION(r168528) Subpixel rendering: Selection rect is not positioned properly when SVG text is selected. https://bugs.webkit.org/show_bug.cgi?id=132868

Reviewed by Dirk Schulze.

Scale the selection rect. r168528 missed applying this final transform on the selection/painting rect.

Source/WebCore:
Test: svg/text/hidpi-text-selection-rect-position.html

* rendering/svg/SVGInlineTextBox.cpp:
(WebCore::SVGInlineTextBox::selectionRectForTextFragment):

LayoutTests:
* svg/text/hidpi-text-selection-rect-position-expected.html: Added.
* svg/text/hidpi-text-selection-rect-position.html: Added.


Canonical link: https://commits.webkit.org/150919@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@168687 268f45cc-cd09-0410-ab3c-d52691b4dbfc